# SpecsViewer

./: .gitignore  CMakeLists.txt  README.md  build.bat
libs/GLAD/include/glad/: glad.h
libs/GLAD/src/: glad.c
libs/NVAPI/: nvapi_mingw.h
libs/WinRing0/: WinRing0.h
resources/db/: SiPolicy_Enforced.xml
resources/jsons/: cpu_references_db.json
resources/rc/: version_info.rc.in
src/: app.c  app.h  app_version.h.in  main.c
src/bench/: bench.c  bench.h
src/core/: backend.c  backend.h
src/core/components/: components.h
src/core/components/cpu/: cpu_info.c  cpu_winring0.c
src/core/components/gpu/: gpu_check.c
src/core/components/gpu/nvidia/: nvapi_dyn.c  nvapi_dyn.h  nvd_gpu_info.c
src/core/components/motherboard/: mboard_info.c
src/core/components/ram/: ram_info.c  ram_winring.c
src/core/components/system/: system_info.c
src/core/security/: rating.c  secure.h
src/core/security/drivers/: drivers_collect.c  loldrivers_db.c  ms_blocklist_db.c  unsigned_drivers_check.c
src/core/security/hardware/: hwsec_collect.c
src/core/security/hardware_fingerprint/: hardware_fingerprint.c
src/core/winring/: winring.c  winring0.h
src/onstart/: privilege.c  privilege.h  winring_check.c  winring_check.h
src/ui/: frame.c  nk_backend.c  nk_common.h  topbar.c  ui.h  ui_icons.c
src/ui/helpers/: ansi_to_utf8.c  helpers.h  hyperlink.c
src/ui/pages/: ui_about.c  ui_bench.c  ui_cpu.c  ui_drivers_list.c  ui_gpu.c  ui_hardware_fingerprint.c  ui_ram_mainboard.c  ui_secure.c  ui_sensors.c  ui_usermode_warn.c
src/update/: updater_check.c  updater_check.h
